--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
                 <h4 style="margin:0 0 10px 0; color:var(--primary);">سجل المراقبة:</h4>
                 <ul id="logs" style="list-style: none; padding: 0; font-size: 0.85rem; color: #555;"></ul>
             </div>
+            <div>
+                جميع الحقوق محفوظة ل KING ABDO©️
+            </div>
         </div>
+        
     </main>
 
     <script>
