--- a/admin.html
+++ b/admin.html
@@ -48,6 +48,7 @@
             <p id="examLink">...</p>
             <button class="btn" style="background:#555; margin-top:10px;" onclick="copyLink()">نسخ الرابط</button>
         </div>
+        <footer>جميع الحقوق محفوظة ل KING ABDO ©️</footer>
     </div>
 
     <script>
