Disable right-click context menu with alert

--- a/index.html
+++ b/index.html
@@ -361,7 +361,12 @@ window.addEventListener('DOMContentLoaded', () => {
     initSystem(); 
 });
 // ==========================================
-        
+        <script>
+document.addEventListener("contextmenu", function(e) {
+    e.preventDefault(); // يمنع قائمة كليك يمين
+    alert("الضغط بالزر الأيمن معطل!"); // اختياري لإظهار رسالة
+});
+</script>
     </script>
 </body>
 </html>
